--- a/css/all.css
+++ b/css/all.css
@@ -3,6 +3,6 @@
 /* bootstrap icons */
 /* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"); */
 /* core bootstrap css */
-@import url("bootstrap/bootstrap.css");
+@import url("bootstrap/bootstrap.min.css");
 /* my custom css */
 @import url("custom/extra.css");
